--- a/Land_Sector_Data_Analysis/Global_Analysis/Continents/Africa/South Africa/south africa SDJ.ipynb
+++ b/Land_Sector_Data_Analysis/Global_Analysis/Continents/Africa/South Africa/south africa SDJ.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sa_bound = get_df(r\"C:\\O\\Outreachy_Siziwe_2023\\ZAF_AL2_South_Africa.json\")"
+    "df_sa_bound = get_df(r\"C:\\O\\Outreachy_Siziwe\\ZAF_AL2_South_Africa.json\")"
    ]
   },
   {
@@ -295,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all_states_bound = get_df(r\"C:\\O\\Outreachy_Siziwe_2023\\ZAF_ALL_states.json\")"
+    "df_all_states_bound = get_df(r\"C:\\O\\Outreachy_Siziwe\\ZAF_ALL_states.json\")"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_gauteng_bound = get_df(r\"C:\\O\\Outreachy_Siziwe_2023\\ZAF_AL4_Gauteng.json\")"
+    "df_gauteng_bound = get_df(r\"C:\\O\\Outreachy_Siziwe\\ZAF_AL4_Gauteng.json\")"
    ]
   },
   {
@@ -585,7 +585,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sa_PF = get_df(r\"C:\\O\\Outreachy_Siziwe_2023\\ZAF_South Africa_SDPT.json\")"
+    "df_sa_PF = get_df(r\"C:\\O\\Outreachy_Siziwe\\ZAF_South Africa_SDPT.json\")"
    ]
   },
   {
@@ -1071,7 +1071,7 @@
    "metadata": {},
    "source": [
     "<a class=\"anchor\" id=\"part9\"></a>\n",
-    "# <span style=\"font-family: candara; font-size: 25px; font-style: normal; font-weight: bold; letter-spacing: 3px; text-align: center; color:  #01796F; line-height:1.0\"> 9. CONLCUSION </span>\n",
+    "# <span style=\"font-family: candara; font-size: 25px; font-style: normal; font-weight: bold; letter-spacing: 3px; text-align: center; color:  #01796F; line-height:1.0\">  CONLCUSION </span>\n",
     "\n",
     "<hr style=\"height: 0.5px; border: 0; background-color: #342D7E\"> "
    ]
@@ -1094,7 +1094,7 @@
    "metadata": {},
    "source": [
     "<a class=\"anchor\" id=\"part10\"></a>\n",
-    "# <span style=\"font-family: candara; font-size: 25px; font-style: normal; font-weight: bold; letter-spacing: 2px; text-align: center; color:  #01796F; line-height:1.0\"> 10.REFERENCES </span>\n",
+    "# <span style=\"font-family: candara; font-size: 25px; font-style: normal; font-weight: bold; letter-spacing: 2px; text-align: center; color:  #01796F; line-height:1.0\"> REFERENCES </span>\n",
     "\n",
     "<hr style=\"height: 0.5px; border: 0; background-color: #342D7E\"> "
    ]
